samples/_failures_safe/1761601027_5d1dd9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7c976482.c: In function ‘print_entries_by_level’:
./samples/SAFE/__tmp_7c976482.c:136:5: error: expected declaration or statement at end of input
  136 |     if (!found) {
      |     ^~
./samples/SAFE/__tmp_7c976482.c:136:5: error: expected declaration or statement at end of input
